--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,13 @@
                     <img src="/assest/OLIVE/woman.png" />
                 </div>
                 <div class="swiper-slide">
+                    <img src="/assest/OLIVE/ankara.png" />
+                </div>
+                <div class="swiper-slide">
                     <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/flowergirl.png" />
                 </div>
             </div>
             <!-- If we need pagination -->
