--- a/views/provider/auditions.ejs
+++ b/views/provider/auditions.ejs
@@ -419,9 +419,9 @@
                                             <i class="material-icons">more_vert</i>
                                         </a>
                                         <ul class="dropdown-menu pull-right">
-                                            <li><a href="javascript:void(0);">Action</a></li>
-                                            <li><a href="javascript:void(0);">Another action</a></li>
-                                            <li><a href="javascript:void(0);">Something else here</a></li>
+                                            <li><a href="/provider/createaudition">Create Audition</a></li>
+                                            <!-- <li><a href="javascript:void(0);">Another action</a></li>
+                                            <li><a href="javascript:void(0);">Something else here</a></li> -->
                                         </ul>
                                     </li>
                                 </ul>
