--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -91,9 +91,10 @@
         <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
+
                 <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
                 enthusiasts
-                seeking talent discovery, training, incubation, content production, publicity, audience engagement and
+                seeking talent discovery, training, incubation, content production, publicity audience engagement and
                 market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
             </p>
             <div class="youtube">
