--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -36,6 +36,7 @@
     <section class="content link_register">
         <br>
         <br>
+        <br>
         <div class="CONGRATULATION">
             <img width="50px" height="50px" src="/assest/OLIVE/confirm.png" alt="" srcset="">
             <h4>CONGRATULATION</h4>
@@ -45,29 +46,34 @@
                 individuals showcase their talent.
             </P>
             <div class="await"></div>
-            <br>
+
             <button class="btn" onClick="makePayment()">PROCEED TO MAKE PAYMENT</button>
+            <a href="/dashbaord">GO TO DASHBOARD </a>
+            <br>
+            <br>
             <h5>
                 <script src="https://checkout.flutterwave.com/v3.js"></script>
-                <a href="/dashbaord">GO TO DASHBOARD </a>
+
             </h5>
 
         </div>
 
 
     </section>
-    <section class="">
-        <div style="display: flex;justify-content: space-between;align-items: center;">
+
+
+    <div class="">
+        <div class="footer_social">
             <div>
                 <p>&copy; 2021 OLIVE</p>
             </div>
-            <div>
+            <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
-                <img src="/assest/OLIVE/insta.png" />
+                <img src="/assest/OLIVE/instagram.png" />
                 <img src="/assest/OLIVE/twitter.png" />
             </div>
         </div>
-    </section>
+    </div>
     <!-- 
     <form>
        
