--- a/views/audition.ejs
+++ b/views/audition.ejs
@@ -19,7 +19,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <h1>logo</h1>
+                <img src="/assest/OLIVE/logo.png" alt="">
             </div>
             <div class="icon">
                 <a href="/profile">
@@ -127,7 +127,7 @@
             forlivevideo.style.transform = 'translateY(-730px)'
             document.querySelector("iframe").src = "https://studio.restream.io/guest/bDBaNllXa7srZaCHW01LjKxavz4ynEU"
         })
-
+        $
 
         // window.addEventListener("DOMContentLoaded", (e) => {
 
