--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1 user-scalable=0">
-    <title>Olive</title>
+    <title>GhenGhen Live</title>
     <link rel="stylesheet" href="/styles/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <h1>logo</h1>
+                <img src="/assest/OLIVE/logo.png" alt="" width="30px" height="25px">
             </div>
             <!-- <div class="icon">
                 <div class="user">
@@ -91,8 +91,8 @@
         <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
-
-                <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
+                <strong>GhenGhen Live platform</strong> is a triumvirate and youth-centric digital ecosystem built for
+                creative
                 enthusiasts
                 seeking talent discovery, training, incubation, content production, publicity audience engagement and
                 market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
@@ -102,7 +102,7 @@
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
             </div>
 
-            <b class="content_header register_link_header">JOIN OLIVE FOR FREE </b>
+            <b class="content_header register_link_header">JOIN GhenGhen Live FOR FREE </b>
             <form class="register_link">
                 <div class="number">
                     <label for="number">Please enter your phone number</label>
