--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -99,7 +99,7 @@
     <div class="">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 OLIVE</p>
+                <p>&copy; 2021 GhenGhen Live</p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
@@ -152,7 +152,7 @@
                                     customer: {
                                         email: "<%=user.email%>",
                                         phone_number: "<%= user.username %>",
-                                        name: "Olive tution",
+                                        name: "GhenGhen Live tution",
                                     },
                                     callback: function (datas) {
                                         fetch("/paid", {
@@ -183,8 +183,8 @@
                                         window.location.assign("/digitalauditionplatform")
                                     },
                                     customizations: {
-                                        title: "Olive",
-                                        description: "Olive tution fot <%=auditions.auditionName%>",
+                                        title: "GhenGhen Live",
+                                        description: "GhenGhen Live tution for <%=auditions.auditionName%>",
                                         logo: logo,
                                     },
                                 });
