--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1 user-scalable=0">
-    <title>Olive</title>
+    <title>GhenGhen Live</title>
     <link rel="stylesheet" href="/styles/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,17 +33,17 @@
     <div class="container">
         <header>
             <div class="logo">
-                <h1>logo</h1>
+                <img src="/assest/OLIVE/logo.png" alt="">
             </div>
             <div class="icon">
                 <div class="user">
                     <a href="/profile">
-                        <img src="/assest/OLIVE/Group-1.png" alt="" srcset="">
+                        <img class="imgicon" src="/assest/OLIVE/usergold.png" alt="" srcset="">
                     </a>
                 </div>
                 <a href="/dashboard">
                     <div class="home">
-                        <img src="/assest/OLIVE/Group.png" alt="" srcset="">
+                        <img src="/assest/OLIVE/goldHomeIcon.png" alt="" srcset="">
                     </div>
                 </a>
             </div>
