--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -42,7 +42,7 @@
             <h4>CONGRATULATION</h4>
             <P>Your Registration for <span style="color: green; text-transform: uppercase;">
                     <%= audition.auditionName %>
-                </span style="color: green;"> audition is successful. Welcome to OLIVE, a platform where
+                </span style="color: green;"> audition is successful. Welcome to GhenGhen Live, a platform where
                 individuals showcase their talent.
             </P>
             <div class="await"></div>
@@ -65,7 +65,7 @@
     <div class="">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 OLIVE</p>
+                <p>&copy; 2021 GhenGhen Live</p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
@@ -148,7 +148,7 @@
                 },
                 customizations: {
                     title: "<%=audition.auditionName %>",
-                    description: "Olive Tution for <%=audition.auditionName %>",
+                    description: "GhenGhen Live Tution for <%=audition.auditionName %>",
                     logo: "<%=audition.auditionLogo %>",
                 },
             });
