--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,7 +63,7 @@
         <div class="" style="background-color: #fff;">
             <div class="footer_social">
                 <div>
-                    <p>&copy; 2020 OLIVE</p>
+                    <p>&copy; 2020 GhenGhen Live</p>
                 </div>
                 <div class="social_icon">
                     <img src="/assest/OLIVE/fb.png" />
