--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -103,7 +103,7 @@
     <div class="" style="background-color: #fff;">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 OLIVE</p>
+                <p>&copy; 2021 GhenGhen Live</p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
