--- a/views/login.ejs
+++ b/views/login.ejs
@@ -77,7 +77,8 @@
         <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
-                <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
+                <strong>GhenGhen Live platform</strong> is a triumvirate and youth-centric digital ecosystem built for
+                creative
                 enthusiasts
                 seeking talent discovery, training, incubation, content production, publicity, audience engagement and
                 market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
@@ -87,7 +88,7 @@
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
             </div>
 
-            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO OLIVE </b>
+            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO GhenGhen Live </b>
             <form style="margin-bottom: 20px;" class="register_link" id="form">
                 <div class="number">
                     <label for="number">Please enter your phone number</label>
@@ -127,7 +128,7 @@
                 <button class="btn" id="submitBtn" type="submit">SIGN IN</button>
             </form>
 
-            <a style="color: #801315;" class="register" href="/">Register on OLIVE NOW</a>
+            <a style="color: #801315;" class="register" href="/">Register on GhenGhen Live NOW</a>
             <p>or <span>LOG IN</span> with </p>
 
             <!-- <div class="otp_content">
