--- a/views/provider/partials/header.ejs
+++ b/views/provider/partials/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Basic Card | Bootstrap Based Admin Template - Material Design</title>
+    <title>GhenGhen Live Provider</title>
     <!-- Favicon-->
     <link rel="icon" href="../../../favicon.ico" type="image/x-icon">
 
@@ -71,7 +71,12 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="/provider/dashboard">Olive Provider</a>
+                <a class="navbar-brand" href="/provider/dashboard">
+
+                    <img src="/assest/OLIVE/logo.png" alt="">
+
+                    GhenGhen Live Provider
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -348,7 +353,7 @@
             <!-- Footer -->
             <div class="legal">
                 <div class="copyright">
-                    &copy; 2021 <a href="javascript:void(0);">OLIVE</a>.
+                    &copy; 2021 <a href="javascript:void(0);">GhenGhen Live</a>.
                 </div>
                 <div class="version">
                     <b>Provider</b>
