--- a/views/provider/signup.ejs
+++ b/views/provider/signup.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Olive Provider</title>
+    <title>GhenGhen Provider</title>
     <!-- Favicon-->
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
@@ -29,8 +29,8 @@
 <body class="signup-page">
     <div class="signup-box">
         <div class="logo">
-            <a href="/provider">Olive<b>Provider</b></a>
-            <small>Join Olive as a Provider </small>
+            <a href="/provider">GhenGhen<b>Provider</b></a>
+            <small>Join GhenGhen Live as a Provider </small>
         </div>
         <div class="card">
             <div class="body">
