--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -33,7 +33,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="/assest/OLIVE/logo.png" alt="" width="30px" height="25px">
+                <img src="/assest/OLIVE/logo.png" alt="">
             </div>
             <!-- <div class="icon">
                 <div class="user">
