--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <h1>logo</h1>
+                <img src="/assest/OLIVE/logo.png" alt="">
             </div>
             <div class="icon">
 
