--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -53,7 +53,9 @@
 
                     <div class="bo" style="position: relative; cursor: pointer;">
 
-                        <img width="147px" height="147px" style="border-radius:12px" src=<%=element.auditionLogo %>>
+                        <img width="147px" height="147px"
+                            style="border: 2px solid #FFCA00;border-radius: 10px;max-width: 147px; max-height: 147px;"
+                            src=<%=element.auditionLogo %>>
 
                         <h6 class="content_header audition" data-id="<%=element._id %>"
                             data-provider="<%=element.provider %>">
