--- a/public/styles/brand.css
+++ b/public/styles/brand.css
@@ -132,6 +132,7 @@ small{
     justify-content: space-around;
     padding: 20px;
     gap: 12px;
+    height: 60%;
 }
 .content_header{
 /* font-weight:900  !important; */
@@ -152,6 +153,9 @@ small{
     outline: none;
     border: none;
 }
+.updateprofile{
+ margin-bottom: 20px;
+}
 
 .record{
    
@@ -171,7 +175,7 @@ small{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    gap: 30px;
+    gap: 15px;
 }
 .brand_text p{
     color: #fff;
@@ -363,4 +367,21 @@ border-radius: 10px;
     font-size: 13px;
     font-weight: bolder;
     text-transform: uppercase;
+}
+
+
+.footer_social{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:  #801315;
+    color: #fff;
+    padding: 5px;
+    font-weight: 300;
+}
+.social_icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
 }
