--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -91,7 +91,7 @@
         <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
-                <strong>GhenGhen Live platform</strong> is a triumvirate and youth-centric digital ecosystem built for
+                <strong>GhenGhen platform</strong> is a triumvirate and youth-centric digital ecosystem built for
                 creative
                 enthusiasts
                 seeking talent discovery, training, incubation, content production, publicity audience engagement and
